fixed white space to the right

--- a/src/app/timeline/timeline.component.css
+++ b/src/app/timeline/timeline.component.css
@@ -1,3 +1,12 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*.enviar{
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -108,11 +117,11 @@ html * {
   -moz-osx-font-smoothing: grayscale;
 }
 
-*, *:after, *:before {
+/**, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+}*/
 
 #body {
   font-size: 100%;
@@ -191,13 +200,6 @@ header h1 {
     font-size: 3.7rem;
   }
 }*/
-html,body
-{
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
 
 header {
   margin-bottom: 200px;
@@ -271,7 +273,7 @@ header {
 .cd-timeline-img i {
   display: block;
   color: black;
-  width: 600px;
+  /*width: 600px;*/
   height: 600px;
   position: relative;
   left: 53%;
